--- a/AspnetCore/RazorPagesMovie/Pages/Movies/Index.cshtml
+++ b/AspnetCore/RazorPagesMovie/Pages/Movies/Index.cshtml
@@ -10,26 +10,41 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+<div class="col-md-4">
+<form>
+    <div class="form-group">
+        <label asp-for="SearchString" class="control-label"></label>
+        <input asp-for="SearchString" class="form-control"/>
+
+        <label asp-for="MovieGenre" class="control-label"></label>
+        <select asp-for="MovieGenre" asp-items="Model.Genres" class="form-control" >
+            <option value="">All</option>
+        </select>
+        <input type="submit" value="Filter" />
+    </div>
+</form>
+</div>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model=> model.Movie[0].Title)
+                @Html.DisplayNameFor(model=> model.Movies[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movie[0].ReleaseDate)
+                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movie[0].Genre)
+                @Html.DisplayNameFor(model => model.Movies[0].Genre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Movie[0].Price)
+                @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Movie) {
+@foreach (var item in Model.Movies) {
         <tr>
             <td>
                 @item.Title
