--- a/AspnetCore/RazorPagesMovie/Pages/Movies/Index.cshtml
+++ b/AspnetCore/RazorPagesMovie/Pages/Movies/Index.cshtml
@@ -40,7 +40,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model=>model.Movies[0].Rating)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -58,6 +60,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem=>item.Rating)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
