--- a/AspnetCore/RazorPagesSchool/Pages/Departments/Delete.cshtml
+++ b/AspnetCore/RazorPagesSchool/Pages/Departments/Delete.cshtml
@@ -6,6 +6,7 @@
 }
 
 <h1>Delete</h1>
+<p class="text-danger">@Model.ConcurrencyErrorMessage</p>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -30,16 +31,11 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Department.Budget)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Department.RowVersion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Department.RowVersion)
-        </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Department.DepartmentId" />
+        <input type="hidden" asp-for="Department.RowVersion" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
