--- a/AspnetCore/RazorPagesSchool/Pages/Departments/Edit.cshtml
+++ b/AspnetCore/RazorPagesSchool/Pages/Departments/Edit.cshtml
@@ -14,6 +14,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Department.DepartmentId" />
+            <input type="hidden" asp-for="Department.RowVersion" />
             <div class="form-group">
                 <label asp-for="Department.Name" class="control-label"></label>
                 <input asp-for="Department.Name" class="form-control" />
